converting views, other minor changes to other sections, and introduce views and cucumber coverage to the example app

--- a/example_app/app/views/tasks/index.html.erb
+++ b/example_app/app/views/tasks/index.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :javascript do -%>
   <%= javascript_tag do %>
-    ExampleApp.init(<%= @tasks.to_json %>);
+    ExampleApp.init(<%== @tasks.to_json %>);
   <% end %>
 <% end -%>
