--- a/release/stylesheets/scribe.css
+++ b/release/stylesheets/scribe.css
@@ -1,4 +1,3 @@
-/* BEG */
 /* ---------------------------------------------------------------------------
    Bare AsciiDoc styles
    Ryan Tomayko <r@tomayko.com>
@@ -8,7 +7,7 @@ body {
 	font-family:verdana,helvetica,arial,sans-serif;
 	font-size:81.25%;   /* 13px */
 	line-height:1.538;  /* 20px */
-	margin:40px 50px;
+	margin:40px auto 50px auto;
 	max-width:53.8461538462em; /* 790px */
 	color:#333;
 }
@@ -32,7 +31,9 @@ p, ul, ol, dl {
 	margin:10px 0
 }
 
-dl { }
+dl {
+	margin-left:40px
+}
 
 dt {
 	font-weight:normal;
@@ -46,39 +47,35 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-	font-size:30px;
+	font-size:40px;
 	line-height:1.428;
 	margin:20px 0;
 }
 
 h2 {
-	font-size:23px;
+	font-size:30px;
 	line-height:1.36363636; /* repeating, of course */
-	margin:20px 0;
+	margin:60px 0 20px 0;
 }
 
 h2 + .sectionbody {}
 
 h3 {
-	font-size:18px;
+	font-size:24px;
 	line-height:1.1;
 	margin:30px 0 10px 0;
 }
 
 h4 {
-	font-size:13px;
-	font-weight:bold;
-	line-height:1.538;
+	font-size:18px;
+	line-height:1.1;
+	margin:20px 0 5px 0;
 }
 
 h5 {
 	font-size:13px;
 	font-style:italic;
-	line-height:1.538;
-}
-
-pre {
-	font-size:larger;
+	line-height:1.1;
 }
 
 #header { 
@@ -88,9 +85,9 @@ pre {
 
 #header h1 { margin-bottom:0 }
 
-
 .title, .sidebar-title {
 	font-weight:normal;
+	color:#000;
 	margin-bottom:0;
 }
 
@@ -110,6 +107,10 @@ pre {
 	text-transform:uppercase;
 	font-weight:bold;
 	color:#888;
+}
+
+.listingblock {
+  margin: 13px 0;
 }
 
 .listingblock .content {
@@ -174,58 +175,3 @@ pre {
 	color:#000;
 	text-transform:uppercase
 }
-
-/* vim: set ft=css ts=4 sw=4 noexpandtab: */
-
-/* END @import url(bare.css); */
-
-/* ---------------------------------------------------------------------------
-   FreeBSD AsciiDoc Theme
-   Ryan Tomayko <r@tomayko.com>
-
-   Based on The FreeBSD Handbook and various other FreeBSD documenration.
---------------------------------------------------------------------------- */
-
-body {
-  font-family:verdana,helvetica,arial,sans-serif;
-  font-size:100%;
-  color:#000;
-}
-
-tt { color:#007A00 }
-pre tt { color:#000 }
-
-dt { color:#000 }
-
-h1, h2, h3, h4, h5 {
-  font-family:'lucida grande',helvetica,verdana,sans-serif;
-  color:#900;
-  font-weight:bold;
-}
-
-#header {
-  text-align:left;
-}
-#header h1 { margin-bottom:40px }
-
-h1 {
-  font-size:36px;
-  line-height:1;
-  margin:40px 0;
-}
-
-h2 {
-  font-size:28px;
-  line-height:1;
-  margin:30px 0 20px 0;
-}
-
-.sectionbody {
-  margin-left:30px;
-}
-
-pre {
-  background:#EEE;
-}
-
-/* vim: set ft=css ts=4 sw=4 noexpandtab: */
