Finish first cut of TDD by example

--- a/example_app/app/assets/templates/tasks/index.jst.ejs
+++ b/example_app/app/assets/templates/tasks/index.jst.ejs
@@ -3,4 +3,10 @@
     <th>Title</th>
     <th>Completed</th>
   </tr>
+  <% tasks.each(function(task) { %>
+    <tr>
+      <td><%= task.escape('title') %></td>
+      <td><%= task.escape('completed') %></td>
+    </tr>
+  <% }); %>
 </table>
