--- a/example_app/app/views/tasks/index.html.erb
+++ b/example_app/app/views/tasks/index.html.erb
@@ -3,10 +3,10 @@
 <div id="tasks">
 </div>
 
-<a class="create" href="#new">Add task</a>
-
 <%= content_for :javascript do -%>
   <%= javascript_tag do %>
-    ExampleApp.init(<%== @tasks.to_json %>);
+    $(function() {
+      ExampleApp.init(<%== @tasks.to_json %>);
+    });
   <% end %>
 <% end -%>
