example app can complete and uncomplete tasks

--- a/example_app/app/assets/templates/tasks/index.jst.ejs
+++ b/example_app/app/assets/templates/tasks/index.jst.ejs
@@ -1,14 +1,12 @@
 <table id="tasks-list">
-  <tr>
-    <th>Title</th>
-    <th>Completed</th>
-  </tr>
-  <% tasks.each(function(task) { %>
+  <thead>
     <tr>
-      <td><%= task.escape('title') %></td>
-      <td><%= task.escape('completed') %></td>
+      <th>Title</th>
+      <th>Completed</th>
     </tr>
-  <% }); %>
+  </thead>
+  <tbody>
+  </tbody>
 </table>
 
 <a class="create" href="#new">Add task</a>
