--- a/example_app/app/views/layouts/application.html.erb
+++ b/example_app/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
 </head>
 <body>
   <div id="contents">
+    <% flash.each do |key, value| -%>
+      <div class="flash <%= key %>"><%= value %></div>
+    <% end -%>
+
     <%= yield %>
   </div>
 
