Green: Show sign in/out state in header

--- a/example_app/app/views/layouts/application.html.erb
+++ b/example_app/app/views/layouts/application.html.erb
@@ -7,9 +7,18 @@
 </head>
 <body>
   <div id="contents">
-    <% flash.each do |key, value| -%>
-      <div class="flash <%= key %>"><%= value %></div>
-    <% end -%>
+    <div id="header">
+      <% flash.each do |key, value| -%>
+        <div class="flash <%= key %>"><%= value %></div>
+      <% end -%>
+
+      <% if signed_in? %>
+        <%= current_user.email %>
+        <%= link_to "Sign out", sign_out_path, :method => :delete %>
+      <% else %>
+        <%= link_to "Sign in", sign_in_path %>
+      <% end %>
+    </div>
 
     <%= yield %>
   </div>
