wip: partial impl of showing attachments

--- a/example_app/app/assets/templates/tasks/show.jst.ejs
+++ b/example_app/app/assets/templates/tasks/show.jst.ejs
@@ -1,7 +1,15 @@
 <p>Task title</p>
 
+<ul class="attachments">
+  <li class="attachment">
+    <p>Attached: upload.jpg</p>
+    <img src="/upload.jpg">
+  </li>
+</ul>
+
 <div class="upload">
   <label for="input">Attach a file to upload</label>
   <input type="file" name="file" />
   <button>Upload attachment</button>
 </div>
+
