Backbone models have raw data, escape HTML when rendering into DOM

--- a/example_app/app/views/tasks/index.html.erb
+++ b/example_app/app/views/tasks/index.html.erb
@@ -12,7 +12,7 @@
     $(function () {
       var json_div       = document.createElement('div');
       json_div.innerHTML = $('#bootstrap').text();
-      var data           = JSON.parse(json_div.innerHTML);
+      var data           = JSON.parse(json_div.innerText);
       ExampleApp.init(data);
     });
   </script>
