--- a/example_app/app/views/tasks/index.html.erb
+++ b/example_app/app/views/tasks/index.html.erb
@@ -10,9 +10,10 @@
 <%= content_for :javascript do -%>
   <script type="text/javascript">
     $(function () {
-      var json_div       = document.createElement('div');
-      json_div.innerHTML = $('#bootstrap').text();
-      var data           = JSON.parse(json_div.innerText);
+      var div = $('<div></div>');
+      div.html($('#bootstrap').text());
+      var data = JSON.parse(div.text());
+
       ExampleApp.init(data);
     });
   </script>
