As a user, I can assign tasks when I create them

--- a/example_app/app/assets/templates/tasks/form_fields.jst.ejs
+++ b/example_app/app/assets/templates/tasks/form_fields.jst.ejs
@@ -8,11 +8,18 @@
       <div class="bbf-help">
       </div>
     </li>
+    <li>
+      <ul class="assignees">
+        <li class="bbf-field">
+          <a class="add-assignee" href="#">Add Assignee</a>
+        </li>
+      </ul>
+    </li>
     <li class="bbf-field">
       <input type="submit" value="Create task">
     </li>
-    <li class="bbf-field leave">
-      <a href="#">I'm done adding tasks</a>
+    <li class="bbf-field">
+      <a class="leave" href="#">I'm done adding tasks</a>
     </li>
   </ul>
 </fieldset>
