--- a/example_app/app/assets/templates/tasks/item.jst.ejs
+++ b/example_app/app/assets/templates/tasks/item.jst.ejs
@@ -1,2 +1,3 @@
 <td><label>Task title</label><a class="task-link" href="#">details</a></td>
+<td class="assignees">(Unassigned)</td>
 <td><input type="checkbox"></td>
