#59 change init() to initialize() for consistency, good-name-ed-ness

--- a/example_app/app/views/tasks/index.html.erb
+++ b/example_app/app/views/tasks/index.html.erb
@@ -17,7 +17,7 @@
       div.html($('#bootstrap').text());
       var data = JSON.parse(div.text());
 
-      ExampleApp.init(data);
+      ExampleApp.initialize(data);
     });
   </script>
 <% end %>
