incorporating/removing comments

--- a/example_app/app/views/tasks/index.html.erb
+++ b/example_app/app/views/tasks/index.html.erb
@@ -5,7 +5,8 @@
 
 <script type="text/json" id="bootstrap">
   {
-    "tasks": <%= @tasks.to_json(include: { assigned_users: { only: [:id, :email] } }) %>,
+    "tasks": <%= @tasks.to_json(include: 
+                                { assigned_users: { only: [:id, :email] } }) %>,
     "users": <%= @users.to_json %>
   }
 </script>
