Add DocumentCloud visualsearch library
http://documentcloud.github.com/visualsearch/

--- a/example_app/app/views/layouts/application.html.erb
+++ b/example_app/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>ExampleApp</title>
   <%= stylesheet_link_tag    "application" %>
+  <%= render :partial => 'layouts/visualsearch_css' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
