--- a/example_app/app/assets/stylesheets/application.css
+++ b/example_app/app/assets/stylesheets/application.css
@@ -3,8 +3,8 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
- *= require_tree . 
  *= require _flutie
+ *= require tasks.css.scss
  *= require backbone-forms.css
  *= require jquery-ui-1.8.18.custom.css
 */
