--- a/example_app/app/assets/templates/tasks/index.jst.ejs
+++ b/example_app/app/assets/templates/tasks/index.jst.ejs
@@ -1,15 +1,13 @@
-<div class="visual-search"></div>
+<ul>
+  <% tasks.each(function(task) { %>
+    <div class="checkbox complete">
+      <input id="<%= dom_id(task, 'complete') %>"
+             type="checkbox"
+             <%= task.isComplete() ? ' checked="checked"' : '' %>>
+    </div>
 
-<table id="tasks-list">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Assignees</th>
-      <th>Completed</th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
-
-<a class="create" href="#new">Add task</a>
+    <a href="#<%= task.id %>">
+      <%= task.escape("title") %>
+    </a>
+  <% end %>
+</ul>
